--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Dog API: A Simple Example</h1>
+        <h1>Dog API: A Simple Example 1</h1>
 
         <form>
           <label for="how-many-pics-entry">How many dogs do you want to see?</label>
